<resources>
    <string name="app_name">HW40 • Garage Opener</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">OK</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <string name="mqtt_server_settings_header">Server settings</string>
    <string name="mqtt_topics_header">Topics</string>
    <string name="mqtt_misc_header">Miscellaneous</string>
    <string name="mqtt_broker">MQTT broker</string>
    <string name="mqtt_username">Username</string>
    <string name="mqtt_password">Password</string>
    <string name="mqtt_topic_status">Status</string>
    <string name="mqtt_topic_commands">Commands</string>
    <string name="dryrun">Dry run</string>

    <string name="settings">Settings</string>
    <string name="check_settings">Connection error: please check your settings</string>
    <string name="reconnect">Reconnect</string>
    <string name="back">Back</string>
</resources>